# desktop-visualizer

./: .gitignore  CMakeLists.txt  README.md  install.sh  main.cpp  main.cpp.bak  main.hpp  mkrelease.sh  run.sh  util.cpp
input/: pulse.cpp  pulse.h
install/: desktop-visualizer.desktop  deskvis.ini
